<resources>
    <string name="app_name">Task-it</string>
    <string name="txt_heading">Welcome to Task-it</string>
    <string name="btn_enter">Get Started</string>
    <string name="txt_log_heading">Task-it</string>
    <string name="txt_login">Login</string>
    <string name="txt_telNo">Telephone No</string>
    <string name="txt_password">Password</string>
    <string name="et_telNo" />
    <string name="et_password" />
    <string name="btn_forgot">Forgot Password</string>
    <string name="btn_submitLogin">Submit</string>
    <string name="btn_newAcc">Create New Account</string>
    <string name="txt_logEmp">Login as an Employee</string>
    <string name="txt_headNewCus">Create New Account</string>
    <string name="txt_fName">First Name</string>
    <string name="txt_lName">Last Name</string>
    <string name="txt_email">Email</string>
    <string name="et_fName" />
    <string name="et_lName" />
    <string name="et_email" />
    <string name="btn_submitNewLogin">Submit</string>
    <string name="txt_headNew">Create New Account</string>
    <string name="btn_cus">As a Customer</string>
    <string name="btn_emp">As an Employee</string>
    <string name="btn_myAccount">My Account</string>
    <string name="btn_jobHistory">Job History</string>
    <string name="txt_headCusMyAcc">My Account</string>
    <string name="btn_updateCusAcc">Submit</string>
    <string name="btn_cusLocation">My Location</string>
    <string name="txt_headCusMyLoc">My Location</string>
    <string name="txt_HouseNo">House No</string>
    <string name="txt_Street">Street</string>
    <string name="txt_city">City</string>
    <string name="txt_district">District</string>
    <string name="txt_zipCode">Zip Code</string>
    <string name="et_HouseNo" />
    <string name="et_street" />
    <string name="et_city" />
    <string name="et_district" />
    <string name="et_zipCode" />
    <string name="btn_updateCusLoc">Submit</string>
    <string name="txt_headCusMyAccUp">Update Account</string>
    <string name="txt_headCusLocUp">Update Location</string>
    <string name="txt_headCusMyFav">Favourites</string>
    <string name="btn_updateCusFavDel">Delete</string>
    <string name="txt_headCusShJobHis">Job History</string>
    <string name="btn_deleteJobHis">Delete</string>
    <string name="btn_newCusLoc">Add Location</string>
    <string name="txt_headCusLocNew">Add Location</string>
    <string name="btn_submitAdd">Submit</string>
    <string name="btn_submitLogAsEmp">Login as an Employee</string>
    <string name="txt_headForgotPass">Forgot Password</string>
    <string name="paraForgot">Please Enter your Email Address to Validate Your Account</string>
    <string name="btn_submitForgotPass">Submit</string>
    <string name="cusHeaderName">Task-it</string>
    <string name="cusHeaderSubName">All tasks. One App</string>
    <string name="txt_headCusMyPro">My Profile</string>
    <string name="btn_myProAccount">My Account</string>
    <string name="Welcomesub">All of your service needs at the tip of your fingertips</string>
    <string name="btn_updateCusAccUp">Update</string>
    <string name="btn_submitLogin2Next">Next</string>
    <string name="backCreate">Back</string>
    <string name="BackToMyAcc">Back</string>
    <string name="BackToCusLog">Back</string>
    <string name="btn_updateCusLocUp">Update</string>
    <string name="BackToMyProfile">Back</string>
    <string name="BackToCreNewAcc">Back</string>
    <string name="BackToCusNewAcc">Back</string>
    <string name="BackToMyPro">Back</string>
</resources>