<?xml version="1.0" encoding="utf-8"?>

<!-- side Bar -->
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:id="@+id/drawer_layout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".CusLocation"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <!-- side Bar -->
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/cus_header"
        app:menu="@menu/cus_main_menu"
        android:layout_gravity="start"/>

    <!-- side Bar -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".CusLocation">


    <Button
        android:id="@+id/BackToMyProfile"
        android:layout_width="93dp"
        android:layout_height="55dp"
        android:layout_marginStart="36dp"
        android:onClick="BackToMyProfile"
        android:text="@string/BackToMyProfile"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="#61892f"
        app:cornerRadius="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_updateCusLocUp"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_updateCusLocUp"
        android:layout_width="104dp"
        android:layout_height="55dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="36dp"
        android:text="@string/btn_updateCusLocUp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="#86C232"
        app:cornerRadius="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_zipCode" />

    <EditText
        android:id="@+id/et_zipCode"

        android:layout_width="188dp"
        android:layout_height="45dp"

        android:layout_marginTop="15dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="textPassword"
        android:text="@string/et_zipCode"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_district"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/txt_zipCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:fontFamily="sans-serif"
        android:text="@string/txt_zipCode"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_zipCode"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_district"
        android:layout_width="188dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="textPersonName|phone"
        android:text="@string/et_district"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_city"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/txt_district"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:fontFamily="sans-serif"
        android:text="@string/txt_district"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_district"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_city"
        android:layout_width="188dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="textPersonName|textEmailAddress"
        android:text="@string/et_city"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_street"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/txt_city"
        android:layout_width="84dp"
        android:layout_height="24dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:fontFamily="sans-serif"
        android:text="@string/txt_city"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_city"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_street"
        android:layout_width="188dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="textPersonName"
        android:text="@string/et_street"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_HouseNo"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/txt_Street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:fontFamily="sans-serif"
        android:text="@string/txt_Street"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_street"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_HouseNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:fontFamily="sans-serif"
        android:text="@string/txt_HouseNo"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_HouseNo"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_HouseNo"
        android:layout_width="188dp"
        android:layout_height="45dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/et_HouseNo"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_headCusMyLoc"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/txt_headCusMyLoc"
        android:layout_width="368dp"
        android:layout_height="60dp"
        android:layout_marginTop="76dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/txt_headCusMyLoc"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <!-- side Bar -->
    </androidx.drawerlayout.widget.DrawerLayout>