<?xml version="1.0" encoding="utf-8"?>

<!-- side Bar -->
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:id="@+id/drawer_layout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".CusAccount"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <!-- side Bar -->
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/cus_header"
        app:menu="@menu/cus_main_menu"
        android:layout_gravity="start"/>

    <!-- side Bar -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".CusAccount">

    <Button
        android:id="@+id/btn_myProAccount"
        android:layout_width="164dp"
        android:layout_height="55dp"
        android:layout_marginTop="128dp"
        android:text="@string/btn_myProAccount"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="#86C232"
        app:cornerRadius="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_headCusMyPro" />

    <TextView
        android:id="@+id/txt_headCusMyPro"
        android:layout_width="368dp"
        android:layout_height="60dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/txt_headCusMyPro"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_cusLocation"
        android:layout_width="166dp"
        android:layout_height="55dp"
        android:layout_marginBottom="256dp"
        android:text="@string/btn_cusLocation"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="#61892f"
        app:cornerRadius="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_myProAccount"
        app:layout_constraintVertical_bias="0.882" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <!-- side Bar -->
</androidx.drawerlayout.widget.DrawerLayout>