<?xml version="1.0" encoding="utf-8"?>

<!-- side Bar -->
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:id="@+id/drawer_layout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".CusFavourites"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <!-- side Bar -->
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/cus_header"
        app:menu="@menu/cus_main_menu"
        android:layout_gravity="start"/>

    <!-- side Bar -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".CusFavourites">

    <Button
        android:id="@+id/BackToMyAcc"
        android:layout_width="93dp"
        android:layout_height="55dp"
        android:layout_marginBottom="140dp"
        android:onClick="BackToMyAcc"
        android:text="@string/BackToMyAcc"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="#61892f"
        app:cornerRadius="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_updateCusAcc"
        app:layout_constraintHorizontal_bias="0.256"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_password3"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_updateCusFavDel"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginBottom="60dp"
        android:text="@string/btn_updateCusFavDel"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="#86C232"
        app:cornerRadius="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_headCusMyFav"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txt_headCusMyFav"
        android:layout_width="368dp"
        android:layout_height="60dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/txt_headCusMyFav"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

    <!-- side Bar -->
</androidx.drawerlayout.widget.DrawerLayout>